[gd_scene load_steps=10 format=3 uid="uid://c3b5k3xn3rgeq"]

[ext_resource type="Script" path="res://ConnectablePoint.gd" id="1_7g0ij"]
[ext_resource type="PackedScene" uid="uid://cgsvcpjhwnsnc" path="res://Primitives/drawn_circle.tscn" id="2_715cw"]
[ext_resource type="Script" path="res://AnimationPlayerPlayOnce.gd" id="3_714si"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jv5dd"]
radius = 30.0

[sub_resource type="Animation" id="Animation_mc38r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InnerCircle:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterCircle:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30.0]
}

[sub_resource type="Animation" id="Animation_rwj6u"]
resource_name = "click"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InnerCircle:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, 20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterCircle:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, 20.0]
}

[sub_resource type="Animation" id="Animation_7ssbp"]
resource_name = "hover"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InnerCircle:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.5, -2, -2),
"update": 0,
"values": [30.0, 35.0, 30.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterCircle:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, -2, -2),
"update": 0,
"values": [40.0, 35.0, 40.0]
}

[sub_resource type="Animation" id="Animation_keehe"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InnerCircle:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, -2, -2),
"update": 0,
"values": [20.0, 25.0, 20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterCircle:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, -2, -2),
"update": 0,
"values": [30.0, 25.0, 30.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7jdx0"]
_data = {
"RESET": SubResource("Animation_mc38r"),
"click": SubResource("Animation_rwj6u"),
"hover": SubResource("Animation_7ssbp"),
"idle": SubResource("Animation_keehe")
}

[node name="ConnectablePoint" type="Area2D"]
script = ExtResource("1_7g0ij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jv5dd")

[node name="InnerCircle" parent="." instance=ExtResource("2_715cw")]
radius = 20.0

[node name="OuterCircle" parent="." instance=ExtResource("2_715cw")]
radius = 30.0
color = Color(1, 1, 1, 0.435294)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_7jdx0")
}
blend_times = [&"idle", &"hover", 0.2, &"idle", &"click", 0.2, &"hover", &"idle", 0.2, &"hover", &"click", 0.2, &"click", &"idle", 0.2, &"click", &"hover", 0.2]
script = ExtResource("3_714si")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
